# Markov-s-Letters

./: .coverage  README.md  pyproject.toml  specification.md
.github/workflows/: main.yml
client/src/: App.js
documentation/: implementation.md  info.md  manual.md  specification.md  testing.md
documentation/weekly_reports/: Week_1  Week_1.md  Week_2.md  Week_3.md  Week_4.md  Week_5.md  Week_6.md
flask-server/: .coverage  .coveragerc  .gitignore  performance_markov.py  performance_trie.py  pyproject.toml  pytest.ini  requirements.txt  server.py  server.spec  tasks.py
flask-server/performance/: performance_markov.py  performance_trie.py
flask-server/resources/books/: chasing_darkness.txt  crafting_novels_short_stories.txt  one_indian_girl.txt  the_monk_who_sold_his_ferrari.txt  the_triumphant_church.txt
flask-server/services/: markov_service.py  trie_service.py
flask-server/templates/: index.html
flask-server/tests/: markov_test.py  trie_test.py
src/: .gitignore  .pylintrc
src/resources/books/: crafting_novels_short_stories.txt
src/tests/: markov_test.py
