[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = ""
authors = ["kodtld <kodu@live.fi>"]
readme = "README.md"
packages = [{include = "flask_server"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
