[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = ""
authors = ["kodtld <kodu@live.fi>"]
readme = "README.md"
packages = [{include = "flask_server"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
pypdf2 = "^3.0.1"
nltk = "^3.8.1"
pytest = "^7.2.1"
pylint = "^2.15.10"
virtualenv = "^20.19.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
